Refactor project structure: Split Gen 1 and Gen 2
- Moved all NEAT-based bot files to `gen1/` directory (Legacy)
- Updated `gen2/` with latest DQN improvements:
  - Added self-contained `browser_engine.py` to `gen2/`
  - Implemented Matrix Vision with separated channels for Danger (Enemies/Walls) and Self
  - Added Training Supervisor with Auto-Rollback on degradation
- Updated Documentation:
  - `README.md` now clearly distinguishes between Gen 1 and Gen 2
  - `GUIDE.md` and `IMPROVEMENTS.md` updated to refer to Gen 1 legacy code
- Updated `.gitignore` to exclude large checkpoint files and backups

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ venv/
 __pycache__/
 *.pyc
 .DS_Store
+
+# Training data and checkpoints
+*.pth
+backup_*/
+gen2/backup_*/
+neat-checkpoint-*
+training_stats.csv
+training_stats_old.csv
+gen2/matrix_stats.csv
+fatal_error.log
+temp_slitherbot/
+
+# Browser logs
+chromedriver.log
+geckodriver.log
