--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 backup_*/
 gen2/backup_*/
 neat-checkpoint-*
-training_stats.csv
+#training_stats.csv
 training_stats_old.csv
 gen2/matrix_stats.csv
 fatal_error.log
