--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,9 @@ backup_*/
 gen2/backup_*/
 neat-checkpoint-*
 #training_stats.csv
-training_stats_old.csv
-gen2/matrix_stats.csv
 fatal_error.log
 temp_slitherbot/
-
+gen2/evensts/*
 # Browser logs
 chromedriver.log
 geckodriver.log
